--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.core:core:1.1.0'
-    implementation platform('com.google.firebase:firebase-bom:17.0.0')
-
-    implementation 'com.google.firebase:firebase-database'
-    implementation 'com.google.firebase:firebase-storage'
+    implementation 'com.google.firebase:firebase-database:19.2.0'
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.60"
 }
